set fixed col gap

--- a/Magento_Customer/web/css/source/_module.less
+++ b/Magento_Customer/web/css/source/_module.less
@@ -235,10 +235,8 @@
     .block {
         &:extend(.abs-margin-for-blocks-and-widgets all);
 
-        .column.main & {
-            &:last-child {
-                margin-bottom: 0;
-            }
+        &:last-child {
+            margin-bottom: 0;
         }
 
         .title {
